--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ futures = "0.3.16"
 once_cell = "1.8.0"
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde = { version = "1.0.130", features = ["derive"] }
-serialport = "*"
+serialport = "4.0.1"
